--- a/src/main/resources/templates/patient/view.html
+++ b/src/main/resources/templates/patient/view.html
@@ -1,7 +1,7 @@
 <html lang="en" layout:decorator="/layout" ng-app="ciTrackApp">
 <head>
 </head>
-<body ng-controller="PatientController" th:attr="ng-init='init('+${id}+')'">
+<body ng-controller="PatientController" th:attr="ng-init='init(\''+${id}+'\')'">
 	<div layout:fragment="sidebar">
 		<h3>Actions</h3>
 		<hr/>
