--- a/src/main/resources/templates/patient/view.html
+++ b/src/main/resources/templates/patient/view.html
@@ -48,58 +48,98 @@
 		  <div class="panel panel-primary">
 		    <div class="panel-heading" role="tab" id="prescriptionInfo">
 		      <h4 class="panel-title">
-		        <a role="button" data-toggle="collapse" data-parent="#prescriptionAccordion" href="#prescriptionCollapse" aria-expanded="true" aria-controls="collapseOne">
+		        <a role="button" data-toggle="collapse" data-parent="#prescriptionAccordion" href="#prescriptionCollapse" aria-expanded="true" aria-controls="prescriptionCollapse">
 		          Prescription(s)
 		        </a>
 		      </h4>
 		    </div>
-		    <div id="prescriptionCollapse" class="panel-collapse collapse" role="tabpanel" aria-labelledby="prescriptionInfo">
-		      <div class="panel-body">
-				<div class="panel panel-default">
-				    <div class="panel-heading" role="tab" id="prescriptionItemInfo">
-				      <h4 class="panel-title">
-				        <a role="button" data-toggle="collapse" data-parent="#prescriptionItemAccordion" href="#prescriptionItemCollapse" aria-expanded="true" aria-controls="collapseOne">
-				          Prescription - 1
-				        </a>
-				      </h4>
-				    </div>
-				    <div id="prescriptionItemCollapse" class="panel-collapse collapse" role="tabpanel" aria-labelledby="prescriptionItemInfo">
-				      <div class="panel-body">
-				        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-				      </div>
-				    </div>
-				 </div>
-		      </div>
-		    </div>
+		   <div id="prescriptionCollapse" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="prescriptionInfo">
+      			<div class="panel-body">
+      				<div class="panel-group" id="prescriptionItemAccordion" role="tablist" aria-multiselectable="true">
+					  <div class="panel panel-default" ng-repeat="pres in prescriptions">
+					    <div class="panel-heading" role="tab" id="headingPrescriptionItem{{$index}}">
+					      <h4 class="panel-title">
+					        <a role="button" data-toggle="collapse" data-parent="#prescriptionItemAccordion" href="#collapsePrescriptionItem{{$index}}" aria-expanded="true" aria-controls="collapsePrescriptionItem{{$index}}">
+					          {{pres.date}}-{{pres.patientId}}
+					        </a>
+					      </h4>
+					    </div>
+					    <div id="collapsePrescriptionItem{{$index}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingPrescriptionItem{{$index}}">
+					      <div class="panel-body">
+					      	<form class="form-horizontal" name="textFieldForm" ng-submit="submit(textFieldForm);addPrescription(prescription, textFieldForm)">
+		  					<div th:replace="/message/validation.error.message :: validationErrorMessage" />
+						      	<table class="table">
+								    <tr>
+								    	<th>Description</th>
+								    	<th>Dose</th>
+								    	<th></th>
+								    </tr>
+								    <tr ng-repeat="presItem in pres.prescriptionItem">
+								    	<td>
+								    		<ci-text-field mandatory="true" placeholder="Medication description"  ng-model="presItem.description" name="description" errormessage="medicationDescErrorMessage"/>
+								    	</td>
+								    	<td>
+								    		<label class="radio-inline">
+											  <input type="radio" name="doseOptions{{$index}}" id="doseOptions111" ng-model="presItem.dose" value="1+1+1" required=""/> 1+1+1
+											</label>
+											<label class="radio-inline">
+											  <input type="radio" name="doseOptions{{$index}}" id="doseOptions101"  ng-model="presItem.dose" value="1+0+1" required=""/> 1+0+1
+											</label>
+											<label class="radio-inline">
+											  <input type="radio" name="doseOptions{{$index}}" id="doseOptions100" ng-model="presItem.dose" value="1+0+0" required=""/> 1+0+0
+											</label>
+											<label class="radio-inline">
+											  <input type="radio" name="doseOptions{{$index}}" id="doseOptions010" ng-model="presItem.dose" value="0+1+0" required=""/> 0+1+0
+											</label>
+											<label class="radio-inline">
+											  <input type="radio" name="doseOptions{{$index}}" id="doseOptions001" ng-model="presItem.dose" value="0+0+1" required=""/> 0+0+1
+											</label>
+											
+											<!-- <label class="radio-inline">
+											  <input type="radio" name="doseOptions{{$index}}" id="doseOptionsOthers" ng-model="presItem.dose" value="others" /> others
+											</label> -->
+											<label class="radio-inline">
+												Others :
+												<input type="text" name="othersDose{{$index}}" id="othersDose" ng-model="presItem.othersDose"  />
+											</label>
+											<label class="radio-inline">
+												<button type="button" ng-click="resetDoes($index)"> Reset</button>
+											</label>
+								    	</td>
+								    	<td>
+								    		<button ng-if="$index+1 == prescriptionItem.length" ng-click="addMoreMedication()"  class="btn btn-default" >More >></button>
+								    		<button ng-if="$index+1 != prescriptionItem.length" ng-click="removeMedication()"  class="btn btn-default" >Remove X</button>
+								    	</td>
+								    </tr> 
+								    <tr>
+								    	<td>
+								    		<strong>Any comments</strong>
+								    	</td>
+								    	<td>
+				 				    		 <ci-text-area placeholder="Any comments" type="textarea" ng-model="pres.comments" name="comments" rows="3" cols="20" mandatory="false" />
+				 				    	</td>
+								    	<td>
+								    	</td>
+								    </tr>
+								    <tr>
+								    	<td>
+								    		 <button type="submit" class="btn btn-default" >ADD</button>
+								    	</td>
+								    	<td>
+								    	</td>
+								    	<td>
+								    	</td>
+								    </tr> 
+							    </table>
+							    </form>
+							    
+					      </div>
+					    </div>
+					  </div>
+					</div>
+        		</div>
+    	   </div>
 		  </div>
-		  <!-- <div class="panel panel-default">
-		    <div class="panel-heading" role="tab" id="headingTwo">
-		      <h4 class="panel-title">
-		        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-		          Collapsible Group Item #2
-		        </a>
-		      </h4>
-		    </div>
-		    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-		      <div class="panel-body">
-		        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-		      </div>
-		    </div>
-		  </div>
-		  <div class="panel panel-default">
-		    <div class="panel-heading" role="tab" id="headingThree">
-		      <h4 class="panel-title">
-		        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-		          Collapsible Group Item #3
-		        </a>
-		      </h4>
-		    </div>
-		    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-		      <div class="panel-body">
-		        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-		      </div>
-		    </div>
-		  </div> -->
 		</div>
 		<script th:src="@{/custom/js/patientController.js}"></script>
 	</div>
