--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,26 +1,28 @@
 <html lang="en" layout:decorator="/layout" ng-app="ciTrackApp">
 <head>
 </head>
-<body ng-controller="CiTrackController">
+<body ng-controller="CiTrackController" ng-init="loadAllPatient()">
 	<div>
 		<div layout:fragment="sidebar">
-			<ul class="nav nav-sidebar">
-            <li> <a th:href="@{/patient/add}">Add patient</a></li>
-            <li><a th:href="@{/patient/list}">Add prescription</a></li>
-          </ul>
-          <ul class="nav nav-sidebar">
-            <li><a href="">Nav item</a></li>
-            <li><a href="">Nav item again</a></li>
-            <li><a href="">One more nav</a></li>
-            <li><a href="">Another nav item</a></li>
-            <li><a href="">More navigation</a></li>
-          </ul>
-          <ul class="nav nav-sidebar">
-            <li><a href="">Nav item again</a></li>
-            <li><a href="">One more nav</a></li>
-            <li><a href="">Another nav item</a></li>
-          </ul> 
-		</div>
+			<h2>Patient(s)</h2>
+			<hr/>
+			<table class="table" id="patientsShort">
+				<thead>
+					<tr>
+						<th>
+							Name, Date of birth
+						</th>
+					</tr>
+				</thead>
+				<tbody>
+				<tr ng-repeat="patient in patients">
+					<td>
+						<a href="/patient/view/{{patient.id}}"> {{patient.firstName}} {{patient.lastName}}, <strong>{{patient.dob}}</strong></a>
+					</td>
+				</tr>
+				</tbody>
+				</table>
+			</div>
 		<div layout:fragment="content">
 			
 			<p class="pull-right visible-xs">
