--- a/src/main/resources/templates/patient/view.html
+++ b/src/main/resources/templates/patient/view.html
@@ -182,6 +182,8 @@
 							    </table>
 							    
 					      <!-- </div> -->
+					      
+					      	<a href="/prescription/view/{{pres.prescriptionPdfId}}">View as PDF</a>
 					    </div>
 					  </div>
 					</div>
