--- a/src/main/resources/templates/report_template/pres_template.html
+++ b/src/main/resources/templates/report_template/pres_template.html
@@ -282,6 +282,9 @@
 			                 <td>
 			                    <span th:text="${prescriptionItem.dose}"></span>
 			                </td>
+			                <td>
+			                    <span th:text="${prescriptionItem.othersDose}"></span>
+			                </td>
 			            </tr>
 		            </table>
 	            </td>
