--- a/src/main/resources/templates/prescription/add.html
+++ b/src/main/resources/templates/prescription/add.html
@@ -14,7 +14,7 @@
 		    </a>
 		  </div>
 		  <div class="media-body">
-		    <h4 class="media-heading">Add Prescription</h4>
+		    <h4 class="media-heading">Add Prescription for <a style="font-style: italic;" href="/patient/view/{{patient.id}}">{{patient.firstName}} {{patient.lastName}} ({{patient.dob}})</a></h4>
 		    
 		  </div>
 		</div>
